--- a/login.html
+++ b/login.html
@@ -15,7 +15,8 @@
 				<form class="form">
 					<input type="text" placeholder="Username">
 					<input type="password" placeholder="Password">
-					<button type="submit" id="login-button">Login</button>
+					<button type="submit" id="login-button">Login</button> <br/>
+					<button type="submit" id="sign-up-button">Sign Up</button>
 				</form>
 			</div>
 
