--- a/account.html
+++ b/account.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>LifeText Account</title>
-</head>
-<body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="account.js"></script>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>LifeText Account</title>
+    </head>
+    <body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="account.js"></script>
 
-<div class="wrapper">
-    <div class="container" visible>
-        <h1>sup, you on yo account page</h1>
+        <div class="wrapper">
 
-        <form class="form">
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <button type="submit" id="login-button">Login</button>
-        </form>
-    </div>
+            <div class="container" visible="false" style="padding:10px 0">
+                <!--{% if current_user.is_authenticated %} -->
+                    <h1>{{ current_user.username }}'s Account</h1>
 
-    <ul class="bg-bubbles">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</div>
-</body>
+                    <form class="form" style="padding:10px 0">
+                        <div id="attributes">
+                            Name: <input type="text" placeholder="FirstName LastName" value=current_user.name style="height:35px;">
+                            Phone Number: <input type="tel" placeholder="Phone Number" value=current_user.phone style="height:35px;">
+                            Friend's Phone 1: <input type="tel" placeholder="Friend's Phone Number 1" value=current_user.friend1 style="height:35px;">
+                            Friend's Phone 2: <input type="tel" placeholder="Friend's Phone Number 2" value=current_user.friend2 style="height:35px;">
+                        </div>
+                        <button type="submit" id="save-button" style="height:35px; padding-top:7px; margin-top:10px;">Save</button>
+                    </form>
+                <!--{% else %}
+                    <h1>Not logged in</h1>
+                {% endif %} -->
+            </div>
+
+            <ul class="bg-bubbles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </body>
 </html>
