added error logging in messages

--- a/login.html
+++ b/login.html
@@ -17,6 +17,14 @@
 					<input type="password" placeholder="Password">
 					<button type="submit" id="login-button">Login</button> <br/>
 					<button type="submit" id="sign-up-button">Sign Up</button>
+					<input type="text"
+						   id="error"
+						   style= "visibility:hidden;
+						   margin-top: 10px;
+    					   color: rgba(185, 59, 59, 0.82);
+    					   background-color: rgba(255, 80, 80, 0.2);
+    					   border-color: rgba(255, 0, 0, 0.19);"
+						   disabled>
 				</form>
 			</div>
 
